Fix a warning.